[package]
name = "redbush"
version = "0.1.0"
authors = ["jasilven <jasilven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = "0.5"
neovim-lib = "0.6.0"
clap = "2.33.0"
chrono = "0.4"
edn = "0.3.0"
bencode_rs = { git = "https://github.com/jasilven/bencode_rs", tag = "v0.1.0" }
